style: fix style

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,58 +1,40 @@
 ---
-import BaseHead from "../../components/BaseHead.astro";
-import Header from "../../components/Header.astro";
-import Footer from "../../components/Footer.astro";
-import { SITE_TITLE, SITE_DESCRIPTION } from "../../consts";
 import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 import { Image } from "astro:assets";
+import BasePage from "../../layouts/BasePage.astro";
 
 const posts = (await getCollection("blog")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-    <style>
-      main {
-        width: 960px;
+<BasePage>
+  <section>
+    <ul class="flex flex-col">
+      {
+        posts.map((post) => (
+          <li>
+            <a
+              href={`/blog/${post.id}/`}
+              class="text-black hover:text-blue-500"
+            >
+              {post.data.heroImage && (
+                <Image
+                  width={720}
+                  height={360}
+                  src={post.data.heroImage}
+                  alt=""
+                />
+              )}
+              <h4>{post.data.title}</h4>
+              <p>
+                <FormattedDate date={post.data.pubDate} />
+              </p>
+            </a>
+          </li>
+        ))
       }
-    </style>
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section>
-        <ul class="flex flex-col">
-          {
-            posts.map((post) => (
-              <li>
-                <a
-                  href={`/blog/${post.id}/`}
-                  class="text-black hover:text-blue-500"
-                >
-                  {post.data.heroImage && (
-                    <Image
-                      width={720}
-                      height={360}
-                      src={post.data.heroImage}
-                      alt=""
-                    />
-                  )}
-                  <h4>{post.data.title}</h4>
-                  <p>
-                    <FormattedDate date={post.data.pubDate} />
-                  </p>
-                </a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-    </main>
-    <Footer />
-  </body>
-</html>
+    </ul>
+  </section>
+</BasePage>
