--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-  &copy; {today.getFullYear()} Your name here. All rights reserved.
+  &copy; {today.getFullYear()} BB Blog. All rights reserved.
   <div class="social-links">
     <a href="https://github.com/withastro/astro" target="_blank">
       <span class="sr-only">Go to Astro's GitHub repo</span>
