--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE } from "../consts";
 
 <header class="m-0 px-0 py-4 bg-white shadow">
   <nav>
-    <h2 class="m-0 text-3xl"><a href="/">{SITE_TITLE}</a></h2>
+    <div class="m-0 text-4xl font-black"><a href="/">{SITE_TITLE}</a></div>
     <div class="internal-links">
       <HeaderLink href="/">Home</HeaderLink>
       <HeaderLink href="/blog">Blog</HeaderLink>
