--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
   h3,
   h4,
   h5 {
-    @apply flex items-center mb-0.5;
+    @apply flex items-center mb-0.5 leading-loose;
 
     &::before {
       content: "#";
@@ -16,15 +16,12 @@
   }
   h1 {
     font-size: var(--text-4xl);
-    line-height: var(--leading-loose);
   }
   h2 {
     font-size: var(--text-2xl);
-    line-height: var(--leading-loose);
   }
   h3 {
     font-size: var(--text-xl);
-    line-height: var(--leading-loose);
   }
   a {
     @apply underline text-teal-200;
