--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,10 +3,12 @@ import { getCollection } from "astro:content";
 import FormattedDate from "../../components/FormattedDate.astro";
 import { Image } from "astro:assets";
 import BasePage from "../../layouts/BasePage.astro";
+import PostCard from "../../components/PostCard.tsx";
 
 const posts = (await getCollection("blog")).sort(
-  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
+  (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf(),
 );
+console.log(posts);
 ---
 
 <BasePage>
@@ -19,18 +21,7 @@ const posts = (await getCollection("blog")).sort(
               href={`/blog/${post.id}/`}
               class="text-black hover:text-blue-500"
             >
-              {post.data.heroImage && (
-                <Image
-                  width={720}
-                  height={360}
-                  src={post.data.heroImage}
-                  alt=""
-                />
-              )}
-              <h4>{post.data.title}</h4>
-              <p>
-                <FormattedDate date={post.data.pubDate} />
-              </p>
+              <PostCard post={post} />
             </a>
           </li>
         ))
