--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,20 +12,19 @@ console.log(posts);
 ---
 
 <BasePage>
-  <section>
-    <ul class="flex flex-col">
+  <section class="max-w-4xl mx-auto">
+    <h1 class="text-4xl font-bold text-center mb-8 text-gray-800">博客文章</h1>
+    <div class="space-y-4">
       {
         posts.map((post) => (
-          <li>
-            <a
-              href={`/blog/${post.id}/`}
-              class="text-black hover:text-blue-500"
-            >
-              <PostCard post={post} />
-            </a>
-          </li>
+          <a
+            href={`/blog/${post.id}/`}
+            class="block transition-transform duration-200 hover:scale-[1.02]"
+          >
+            <PostCard post={post} />
+          </a>
         ))
       }
-    </ul>
+    </div>
   </section>
 </BasePage>
