--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,7 +13,7 @@ console.log(posts);
 
 <BasePage>
   <section class="max-w-4xl mx-auto">
-    <h1 class="text-4xl font-bold text-center mb-8 text-gray-800">博客文章</h1>
+    <h1 class="text-4xl font-bold text-center mb-8 text-gray-800">所有文章</h1>
     <div class="space-y-4">
       {
         posts.map((post) => (
